WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45534
WebGL: Fix GCC warnings about suggested parentheses around && within ||
https://bugs.webkit.org/show_bug.cgi?id=45534
Summary
WebGL: Fix GCC warnings about suggested parentheses around && within ||
Andreas Kling
Reported
2010-09-10 05:34:51 PDT
../../../WebCore/html/canvas/WebGLRenderingContext.cpp: In member function ‘WebCore::WebGLGetInfo WebCore::WebGLRenderingContext::getVertexAttrib(long unsigned int, long unsigned int, WebCore::ExceptionCode&)’: ../../../WebCore/html/canvas/WebGLRenderingContext.cpp:1760: error: suggest parentheses around ‘&&’ within ‘||’ ../../../WebCore/html/canvas/WebGLRenderingContext.cpp: In member function ‘void WebCore::WebGLRenderingContext::readPixels(long int, long int, long int, long int, long unsigned int, long unsigned int, WebCore::ArrayBufferView*)’: ../../../WebCore/html/canvas/WebGLRenderingContext.cpp:1947: error: suggest parentheses around ‘&&’ within ‘||’ ../../../WebCore/html/canvas/WebGLRenderingContext.cpp: In member function ‘void WebCore::WebGLRenderingContext::texParameter(long unsigned int, long unsigned int, float, int, bool)’: ../../../WebCore/html/canvas/WebGLRenderingContext.cpp:2225: error: suggest parentheses around ‘&&’ within ‘||’ ../../../WebCore/html/canvas/WebGLRenderingContext.cpp: In member function ‘void WebCore::WebGLRenderingContext::handleNPOTTextures(bool)’: ../../../WebCore/html/canvas/WebGLRenderingContext.cpp:3016: error: suggest parentheses around ‘&&’ within ‘||’
Attachments
Proposed patch
(3.91 KB, patch)
2010-09-10 05:36 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-09-10 05:36:03 PDT
Created
attachment 67170
[details]
Proposed patch
Andreas Kling
Comment 2
2010-09-10 05:54:24 PDT
Comment on
attachment 67170
[details]
Proposed patch Clearing flags on attachment: 67170 Committed
r67194
: <
http://trac.webkit.org/changeset/67194
>
Andreas Kling
Comment 3
2010-09-10 05:54:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug