2010-09-10  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Antonio Gomes.

        WebGL: Fix GCC warnings about suggested parentheses around && within ||
        https://bugs.webkit.org/show_bug.cgi?id=45534

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::getVertexAttrib):
        (WebCore::WebGLRenderingContext::readPixels):
        (WebCore::WebGLRenderingContext::texParameter):
        (WebCore::WebGLRenderingContext::handleNPOTTextures):


Canonical link: https://commits.webkit.org/57930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67194 268f45cc-cd09-0410-ab3c-d52691b4dbfc